Generalized Base.HTML

--- a/ctf/templates/base.html
+++ b/ctf/templates/base.html
@@ -2,25 +2,10 @@
 <html>
 	<head>
 		<title>{% block title %}{% endblock %}</title>
-		<link rel="apple-touch-icon" sizes="57x57" href="{{STATIC_URL}}apple-touch-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="{{STATIC_URL}}apple-touch-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="{{STATIC_URL}}apple-touch-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="{{STATIC_URL}}apple-touch-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="{{STATIC_URL}}apple-touch-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="{{STATIC_URL}}apple-touch-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="{{STATIC_URL}}apple-touch-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="{{STATIC_URL}}apple-touch-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="{{STATIC_URL}}apple-touch-icon-180x180.png">
-		<link rel="icon" type="image/png" href="{{STATIC_URL}}favicon-192x192.png" sizes="192x192">
-		<link rel="icon" type="image/png" href="{{STATIC_URL}}favicon-160x160.png" sizes="160x160">
-		<link rel="icon" type="image/png" href="{{STATIC_URL}}favicon-96x96.png" sizes="96x96">
-		<link rel="icon" type="image/png" href="{{STATIC_URL}}favicon-16x16.png" sizes="16x16">
-		<link rel="icon" type="image/png" href="{{STATIC_URL}}favicon-32x32.png" sizes="32x32">
-		<meta name="msapplication-TileColor" content="#4caf50">
-		<meta name="msapplication-TileImage" content="{{STATIC_URL}}mstile-144x144.png">
+		<!--Add your Favicons here. We suggest you use http://realfavicongenerator.net/ -->
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
-		<meta name="theme-color" content="#1B5E20">
+		<!--<meta name="theme-color" content="#Hex of desired theme color (Tabs in Chrome on Andriod Lollipop use this)">-->
 		<link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/materialize.css"  media="screen,projection"/>
 	</head>
 
@@ -28,7 +13,7 @@
 		<header>
 			<nav role="navigation">
 				<div class="nav-wrapper container">
-					<a href="/" class="brand-logo"><img src="{{STATIC_URL}}mstile-144x144.png" /></a>
+					<!--<a href="/" class="brand-logo"><img src="{{STATIC_URL}}PutLogoHere-144x144Suggested.png" /></a>-->
 					<ul class="right hide-on-med-and-down">
 						{% if "teamid" in request.session and comp_started %}
 						<li><a href="/">Home</a></li>
@@ -80,8 +65,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col l6 s12">
-						<h5 class="white-text">CAMS CTF</h5>
-						<p class="grey-text text-lighten-4">A Capture the Flag competition created by the California Academy of Mathematics and Science for middle and high school students.</p>
+						<h5 class="white-text">CTF</h5>
+						<p class="grey-text text-lighten-4">A Capture the Flag competition created by the [Your Name Here] for [Intended Audience Here].</p>
 					</div>
 					<div class="col l3 s12">
 						<h5 class="white-text">Pages</h5>
@@ -92,20 +77,20 @@
 							</li>
 							<li><a class="white-text" href="/readme">Read Me</a>
 							</li>
-							<li><a class="white-text" href="http://camsctf.com">CCTF Home</a>
+							<li><a class="white-text" href="http://camsctf.com">CTF Home</a>
 							</li>
 						</ul>
 					</div>
 					<div class="col l3 s12">
 						<h5 class="white-text">Connect</h5>
 						<ul>
-							<li><a class="white-text" href="https://github.com/CAMSCSC">Github</a>
+							<li><a class="white-text" href="https://github.com/[User]">Github</a>
 							</li>
-							<li><a class="white-text" href="https://www.facebook.com/groups/1418538045055499/">Facebook</a>
+							<li><a class="white-text" href="https://www.facebook.com/groups/[Group Number]/">Facebook</a>
 							</li>
-							<li><a class="white-text" href="mailto:contact@camsctf.com">Email</a>
+							<li><a class="white-text" href="mailto:contact@website">Email</a>
 							</li>
-							<li><a class="white-text" href="http://camscsc.org/">CAMS CSC</a>
+							<li><a class="white-text" href="http://[Organization Website]">Organization Website</a>
 							</li>
 						</ul>
 					</div>
@@ -113,7 +98,7 @@
 			</div>
 			<div class="footer-copyright">
 				<div class="container">
-					&copy; CCTF 2015 | Made with <a class="grey-text text-lighten-2" href="http://materializecss.com/">MaterializeCSS</a>
+					&copy; CTF 2015 | Made with <a class="grey-text text-lighten-2" href="http://materializecss.com/">MaterializeCSS</a>
 					<a class="grey-text text-lighten-2 right" href="/license">MIT License</a>
 				</div>
 			</div>
