Generalized Account.HTML

--- a/ctf/templates/account.html
+++ b/ctf/templates/account.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Account - CCTF{% endblock %}
+{% block title %}Account - CTF{% endblock %}
 
 {% block main %}
 		<main>
@@ -103,7 +103,7 @@
 		<div id="helpmodal" class="modal">
 			<div class="modal-content">
 				<h4>Account Help</h4>
-				<p>Use this page to update team information and change your password. If there are issues that cannot be resolved or you have a special request, email us at <a href="mailto:contact@camsctf.com"><b>contact@camsctf.com</b>.</p>
+				<p>Use this page to update team information and change your password. If there are issues that cannot be resolved or you have a special request, email us at <a href="mailto:contact@[website]"><b>contact@[website]</b>.</p>
 			</div>
 			<div class="modal-footer">
 				<button class="waves-effect waves-light btn modal-action modal-close">Got it</button>
