Generalized Challenge.HTML

--- a/ctf/templates/challenge.html
+++ b/ctf/templates/challenge.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Challenges - CCTF{% endblock %}
+{% block title %}Challenges - CTF{% endblock %}
 
 {% block main %}
 		<main>
