Generalized Interact.HTML

--- a/ctf/templates/interact.html
+++ b/ctf/templates/interact.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Interact - CCTF{% endblock %}
+{% block title %}Interact - CTF{% endblock %}
 
 {% block main %}	
 		<main>
