Generalized IRC.HTML

--- a/ctf/templates/irc.html
+++ b/ctf/templates/irc.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}IRC - CCTF{% endblock %}
+{% block title %}IRC - CTF{% endblock %}
 
 {% block main %}
 		<main>
