--- a/ctf/templates/license.html
+++ b/ctf/templates/license.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
-{% block title %}License - CCTF{% endblock %}	
+{% block title %}License - CTF{% endblock %}	
 
 {% block main %}
 		<main>
 			<div class="container">
 				<h2 class="center green-text">The MIT License (MIT)</h2>
-				<h5 class="center light">Copyright (c) 2015 CAMS CTF</h5>
+				<h5 class="center light">Copyright (c) 201X [Organization]</h5>
 				<br>
 				<div class="row">
 					<div class="col s12 m8 offset-m2 l6 offset-l3">
