--- a/ctf/templates/login.html
+++ b/ctf/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Login - CCTF{% endblock %}
+{% block title %}Login - CTF{% endblock %}
 
 {% block main %}
 		<main>
