Generalized Register.HTML

--- a/ctf/templates/register.html
+++ b/ctf/templates/register.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Register - CCTF{% endblock %}	
+{% block title %}Register - CTF{% endblock %}	
 
 {% block main %}		
 		<main>
@@ -63,7 +63,7 @@
 										</p>
 									</div>
 									<div class="col s12 center">
-										<div class="g-recaptcha" data-sitekey="6LfDDwITAAAAACM9IoAgEEankOMSiE0ljvyZFU9E"></div>
+										<div class="g-recaptcha" data-sitekey=""></div>
 									</div>
 								</div>
 								{% csrf_token %}
@@ -92,7 +92,7 @@
 		<div id="terms" class="modal">
 			<div class="modal-content">
 				<h4>Terms and Conditions</h4>
-				<p>By registering, you are agreeing to provide CCTF with your information. All information will be used solely for the purpose of contacting your team regarding awards and updates. Failure to enter valid information may result in disqualification. Only teams composed of middle school and/or high school students in the United States will be eligible for awards. Teams that do not meet this criteria can still compete but will not be considered for awards. All content in this competition is purely for educational purposes. You and your team will <b>NOT</b> hold CCTF accountable for any damage caused to your team's devices nor any damage caused by skills that you have learned during this competition under any circumstances.</p>
+				<p>By registering, you are agreeing to provide CTF with your information. All information will be used solely for the purpose of contacting your team regarding awards and updates. Failure to enter valid information may result in disqualification. Only teams composed of middle school and/or high school students in the United States will be eligible for awards. Teams that do not meet this criteria can still compete but will not be considered for awards. All content in this competition is purely for educational purposes. You and your team will <b>NOT</b> hold CTF accountable for any damage caused to your team's devices nor any damage caused by skills that you have learned during this competition under any circumstances.</p>
 			</div>
 			<div class="modal-footer">
 				<button class="waves-effect waves-light btn modal-action modal-close">Got it</button>
