Generalized Scoreboard.HTML

--- a/ctf/templates/scoreboard.html
+++ b/ctf/templates/scoreboard.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Scoreboard - CCTF{% endblock %}
+{% block title %}Scoreboard - CTF{% endblock %}
 
 {% block main %}
 		<main>
