--- a/ctf/templates/stats.html
+++ b/ctf/templates/stats.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Stats - CCTF{% endblock %}
+{% block title %}Stats - CTF{% endblock %}
 
 {% block main %}
 		<main>
