Generalized Error Pages
400.HTMl 403.HTML 404.HTML 500.HTML

--- a/ctf/templates/403.html
+++ b/ctf/templates/403.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}403 Error - CCTF{% endblock %}	
+{% block title %}403 Error - CTF{% endblock %}	
 
 {% block main %}
 		<main>
