--- a/ctf/templates/404.html
+++ b/ctf/templates/404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}404 Error - CCTF{% endblock %}	
+{% block title %}404 Error - CTF{% endblock %}	
 
 {% block main %}
 		<main>
