--- a/ctf/templates/500.html
+++ b/ctf/templates/500.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 
-{% block title %}500 Error - CCTF{% endblock %}	
+{% block title %}500 Error - CTF{% endblock %}	
 
 {% block main %}
 		<main>
 			<div class="container">
 				<h2 class="center green-text">500 Error</h2>
-				<h5 class="center light">Oops. Something went wrong. If problem persists, <a href="mailto:contact@camsctf.com">contact us</a>.</h5>
+				<h5 class="center light">Oops. Something went wrong. If problem persists, <a href="mailto:contact@[website]">contact us</a>.</h5>
 				<br>
 				<div class="row">
 					<img class="materialboxed" data-caption="I'm sorry. Something went wrong." width="100%" src="http://stylonica.com/wp-content/uploads/2014/03/Cute-Cats-cats-33440930-1280-800.jpg">
