Removed error image links

--- a/ctf/templates/403.html
+++ b/ctf/templates/403.html
@@ -9,7 +9,7 @@
 				<h5 class="center light">Are you authorized? No. You are not.</h5>
 				<br>
 				<div class="row">
-					<img class="materialboxed" data-caption="Are you allowed here?" width="100%" src="http://cdn.attackofthecute.com/October-18-2011-02-36-11-10634404235.jpeg">
+					<img class="materialboxed" data-caption="Are you allowed here?" width="100%" src="<!--Put your error image here. -->">
 				</div>
 			</div>
 		</main>
