--- a/ctf/templates/404.html
+++ b/ctf/templates/404.html
@@ -9,7 +9,7 @@
 				<h5 class="center light">This means that the resource you are looking for does not exist. Go away.</h5>
 				<br>
 				<div class="row">
-					<img class="materialboxed" data-caption="An angry cat. Meow. Leave." width="100%" src="http://upload.wikimedia.org/wikipedia/commons/3/35/Angry_tiger.jpg">
+					<img class="materialboxed" data-caption="An angry cat. Meow. Leave." width="100%" src="<!--Put your error image here. -->">
 				</div>
 			</div>
 		</main>
