--- a/ctf/templates/400.html
+++ b/ctf/templates/400.html
@@ -9,7 +9,7 @@
 				<h5 class="center light">That is a very bad request you got there...</h5>
 				<br>
 				<div class="row">
-					<img class="materialboxed" data-caption="You made a bad request." width="100%" src="https://c1.staticflickr.com/5/4150/4985430014_2f279be804_b.jpg">
+					<img class="materialboxed" data-caption="You made a bad request." width="100%" src="<!--Put your error image link here. -->">
 				</div>
 			</div>
 		</main>
