--- a/ctf/templates/500.html
+++ b/ctf/templates/500.html
@@ -9,7 +9,7 @@
 				<h5 class="center light">Oops. Something went wrong. If problem persists, <a href="mailto:contact@[website]">contact us</a>.</h5>
 				<br>
 				<div class="row">
-					<img class="materialboxed" data-caption="I'm sorry. Something went wrong." width="100%" src="http://stylonica.com/wp-content/uploads/2014/03/Cute-Cats-cats-33440930-1280-800.jpg">
+					<img class="materialboxed" data-caption="I'm sorry. Something went wrong." width="100%" src="<!--Put your error image here. -->">
 				</div>
 			</div>
 		</main>
