Find and Replace for ~
Only use within the templates folder

--- a/ctf/templates/400.html
+++ b/ctf/templates/400.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}400 Error - CTF{% endblock %}	
+{% block title %}400 Error - ~CTF{% endblock %}	
 
 {% block main %}
 		<main>
@@ -9,7 +9,7 @@
 				<h5 class="center light">That is a very bad request you got there...</h5>
 				<br>
 				<div class="row">
-					<img class="materialboxed" data-caption="You made a bad request." width="100%" src="<!--Put your error image link here. -->">
+					<img class="materialboxed" data-caption="You made a bad request." width="100%" src="~<!--Put your error image link here. -->">
 				</div>
 			</div>
 		</main>
