--- a/ctf/templates/base.html
+++ b/ctf/templates/base.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<title>{% block title %}{% endblock %}</title>
-		<!--Add your Favicons here. We suggest you use http://realfavicongenerator.net/ -->
+		<!--~Add your Favicons here. We suggest you use http://realfavicongenerator.net/ -->
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
-		<!--<meta name="theme-color" content="#Hex of desired theme color (Tabs in Chrome on Andriod Lollipop use this)">-->
+		<!--~<meta name="theme-color" content="#Hex of desired theme color (Tabs in Chrome on Andriod Lollipop use this)">-->
 		<link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/materialize.css"  media="screen,projection"/>
 	</head>
 
@@ -13,7 +13,7 @@
 		<header>
 			<nav role="navigation">
 				<div class="nav-wrapper container">
-					<!--<a href="/" class="brand-logo"><img src="{{STATIC_URL}}PutLogoHere-144x144Suggested.png" /></a>-->
+					<!--~<a href="/" class="brand-logo"><img src="{{STATIC_URL}}PutLogoHere-144x144Suggested.png" /></a>-->
 					<ul class="right hide-on-med-and-down">
 						{% if "teamid" in request.session and comp_started %}
 						<li><a href="/">Home</a></li>
@@ -65,8 +65,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col l6 s12">
-						<h5 class="white-text">CTF</h5>
-						<p class="grey-text text-lighten-4">A Capture the Flag competition created by the [Your Name Here] for [Intended Audience Here].</p>
+						<h5 class="white-text">~CTF</h5>
+						<p class="grey-text text-lighten-4">A Capture the Flag competition created by the ~[Your Name Here] for ~[Intended Audience Here].</p>
 					</div>
 					<div class="col l3 s12">
 						<h5 class="white-text">Pages</h5>
@@ -77,20 +77,20 @@
 							</li>
 							<li><a class="white-text" href="/readme">Read Me</a>
 							</li>
-							<li><a class="white-text" href="http://camsctf.com">CTF Home</a>
+							<li><a class="white-text" href="http://camsctf.com">~CTF Home</a>
 							</li>
 						</ul>
 					</div>
 					<div class="col l3 s12">
 						<h5 class="white-text">Connect</h5>
 						<ul>
-							<li><a class="white-text" href="https://github.com/[User]">Github</a>
+							<li><a class="white-text" href="https://github.com/~[User]">Github</a>
 							</li>
-							<li><a class="white-text" href="https://www.facebook.com/groups/[Group Number]/">Facebook</a>
+							<li><a class="white-text" href="https://www.facebook.com/groups/~[Group Number]/">Facebook</a>
 							</li>
-							<li><a class="white-text" href="mailto:contact@website">Email</a>
+							<li><a class="white-text" href="mailto:contact@~[website]">Email</a>
 							</li>
-							<li><a class="white-text" href="http://[Organization Website]">Organization Website</a>
+							<li><a class="white-text" href="http://~[Organization Website]">Organization Website</a>
 							</li>
 						</ul>
 					</div>
