--- a/ctf/templates/challenge.html
+++ b/ctf/templates/challenge.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Challenges - CTF{% endblock %}
+{% block title %}Challenges - ~CTF{% endblock %}
 
 {% block main %}
 		<main>
@@ -72,7 +72,7 @@
 		<div id="helpmodal" class="modal">
 			<div class="modal-content">
 				<h4>Challenges Help</h4>
-				<p>This is the area where you will spend a majority of your time. Please peruse the <a target="_blank" href="/readme/#challenges">read me</a> for more information! Double click/tap the challenge tab to force refresh challenges. Something seriously messed up about the challenge page? - <a href="#" id="clear-cache">clear persistent cache</a>.</p>
+				<p>This is the area where you will spend a majority of your time. Please peruse the <a target="_blank" href="~">read me</a> for more information! Double click/tap the challenge tab to force refresh challenges. Something seriously messed up about the challenge page? - <a href="#" id="clear-cache">clear persistent cache</a>.</p>
 				<br>
 				<h5>Sort Order</h5>
 				<p>
