--- a/ctf/templates/forgot.html
+++ b/ctf/templates/forgot.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Forgot - CTF{% endblock %}
+{% block title %}Forgot - ~CTF{% endblock %}
 
 {% block main %}
 		<main>
