--- a/ctf/templates/home_out.html
+++ b/ctf/templates/home_out.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}Home - CTF{% endblock %}
+{% block title %}Home - ~CTF{% endblock %}
 
 {% block main %}	
 		<main>
 			<div class="container">
-				<h2 class="center green-text">Welcome to CTF!</h2>
+				<h2 class="center green-text">Welcome to ~CTF!</h2>
 				
 				<div class="row">
 					<div class="col s12">
@@ -51,7 +51,7 @@
 		<div id="helpmodal" class="modal">
 			<div class="modal-content">
 				<h4>Home Help</h4>
-				<p>Welcome to the CTF competition! You can open a help modal like this one at any time by clicking on the <i class="mdi-action-info-outline modal-trigger"></i> in the menu. Find out more information by perusing the <a href="/readme">read me</a> page!</p>
+				<p>Welcome to the ~CTF competition! You can open a help modal like this one at any time by clicking on the <i class="mdi-action-info-outline modal-trigger"></i> in the menu. Find out more information by perusing the <a href="~">read me</a> page!</p>
 				<p>This page displays system messages and a graph of the combined data of all teams. Individual sets of data can be toggled by clicking on the legend. The graph is updated once per minute.</p>
 			</div>
 			<div class="modal-footer">
