--- a/ctf/templates/interact.html
+++ b/ctf/templates/interact.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Interact - CTF{% endblock %}
+{% block title %}Interact - ~CTF{% endblock %}
 
 {% block main %}	
 		<main>
@@ -38,7 +38,7 @@
 		<div id="helpmodal" class="modal">
 			<div class="modal-content">
 				<h4>Interact Help</h4>
-				<p>Admit it. You know you want to give other teams negative points. Now you can. Please peruse the <a target="_blank" href="/readme/#interact">read me</a> before interacting!</p>
+				<p>Admit it. You know you want to give other teams negative points. Now you can. Please peruse the <a target="_blank" href="~">read me</a> before interacting!</p>
 			</div>
 			<div class="modal-footer">
 				<button class="waves-effect waves-light btn modal-action modal-close">Got it</button>
