--- a/ctf/templates/irc.html
+++ b/ctf/templates/irc.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}IRC - CTF{% endblock %}
+{% block title %}IRC - ~CTF{% endblock %}
 
 {% block main %}
 		<main>
@@ -10,8 +10,8 @@
 				<br>
 				<div class="row center">
 					<div class="col s12">
-						<object data="http://widget.mibbit.com/?settings=dc8750598215053745b4e3ab6a097602&server=irc.Mibbit.Net%3A%2B6697&channel=%23cctf" width="100%" height="500" class="hide-on-small-and-down"></object>
-						<a href="http://widget.mibbit.com/?settings=dc8750598215053745b4e3ab6a097602&server=irc.Mibbit.Net%3A%2B6697&channel=%23cctf" target="_blank"><i class="large mdi-communication-chat hide-on-med-and-up"></i></a>
+						<object data="~" width="100%" height="500" class="hide-on-small-and-down"></object>
+						<a href="~" target="_blank"><i class="large mdi-communication-chat hide-on-med-and-up"></i></a>
 					</div>
 				</div>
 			</div>
