--- a/ctf/templates/readme.html
+++ b/ctf/templates/readme.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Read Me - CTF{% endblock %}
+{% block title %}Read Me - ~CTF{% endblock %}
 
 {% block main %}	
 		<main>
@@ -52,7 +52,7 @@
 				
 				<div class="section">
 					<h5>Rules</h5>
-					<p>The rules are located <a target="_blank" href="http://[Rules]">here</a>. Obeying them ensures that everyone can enjoy the competition.<p>
+					<p>The rules are located <a target="_blank" href="~[Rules]">here</a>. Obeying them ensures that everyone can enjoy the competition.<p>
 				</div>
 				
 			</div>
