--- a/ctf/templates/403.html
+++ b/ctf/templates/403.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}403 Error - CTF{% endblock %}	
+{% block title %}403 Error - ~CTF{% endblock %}	
 
 {% block main %}
 		<main>
@@ -9,7 +9,7 @@
 				<h5 class="center light">Are you authorized? No. You are not.</h5>
 				<br>
 				<div class="row">
-					<img class="materialboxed" data-caption="Are you allowed here?" width="100%" src="<!--Put your error image here. -->">
+					<img class="materialboxed" data-caption="Are you allowed here?" width="100%" src="~<!--Put your error image here. -->">
 				</div>
 			</div>
 		</main>
