--- a/ctf/templates/404.html
+++ b/ctf/templates/404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}404 Error - CTF{% endblock %}	
+{% block title %}404 Error - ~CTF{% endblock %}	
 
 {% block main %}
 		<main>
@@ -9,7 +9,7 @@
 				<h5 class="center light">This means that the resource you are looking for does not exist. Go away.</h5>
 				<br>
 				<div class="row">
-					<img class="materialboxed" data-caption="An angry cat. Meow. Leave." width="100%" src="<!--Put your error image here. -->">
+					<img class="materialboxed" data-caption="An angry cat. Meow. Leave." width="100%" src="~<!--Put your error image here. -->">
 				</div>
 			</div>
 		</main>
