--- a/ctf/templates/home.html
+++ b/ctf/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Home - CTF{% endblock %}
+{% block title %}Home - ~CTF{% endblock %}
 
 {% block main %}
 		<main>
@@ -72,7 +72,7 @@
 		<div id="helpmodal" class="modal">
 			<div class="modal-content">
 				<h4>Home Help</h4>
-				<p>Welcome to the CTF competition! You can open a help modal like this one at any time by clicking on the <i class="mdi-action-info-outline modal-trigger"></i> in the menu. Find out more information by perusing the <a href="/readme">read me</a> page!</p>
+				<p>Welcome to the ~CTF competition! You can open a help modal like this one at any time by clicking on the <i class="mdi-action-info-outline modal-trigger"></i> in the menu. Find out more information by perusing the <a href="~">read me</a> page!</p>
 				<p>This page display system messages, recent activities, and a graph of the combined data of all teams. Individual sets of data can be toggled by clicking on the legend. The graph is updated once per minute.</p>
 			</div>
 			<div class="modal-footer">
